tests/baselines/reference/FunctionDeclaration11_es6.errors.txt
FunctionDeclaration11_es6.ts(1,12): error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.


==== FunctionDeclaration11_es6.ts (1 errors) ====
    function * yield() {
               ~~~~~
!!! error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
    }